<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_household_services"
        android:enabled="true"
        android:icon="@mipmap/ic_family"
        android:title="@string/household_service"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mobilization_session"
        android:enabled="true"
        android:icon="@mipmap/ic_jobaids"
        android:title="@string/hps_mobilization_sessions_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_death_register"
        android:enabled="true"
        android:icon="@drawable/tombstone_death"
        android:title="@string/death_register"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more_items"
        android:enabled="true"
        android:icon="@drawable/more_horiz"
        android:title="@string/hps_more"
        app:showAsAction="ifRoom" />

</menu>