<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rlSbccSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_sbcc_session"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/menu_updates"
            android:contentDescription="sbcc session"/>

        <RelativeLayout
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_sbcc_session">
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/hps_death_date"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:visibility="visible"
                tools:text="@string/hps_death_register_death_date" />
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/client_name"
                android:layout_below="@id/hps_death_date"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:visibility="visible"
                tools:text="@string/hps_death_register_name_of_the_client" />
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/cause_of_death"
                android:layout_below="@id/client_name"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:visibility="visible"
                tools:text="@string/hps_death_register_cause_of_death" />
        </RelativeLayout>



    </RelativeLayout>

    <View
        android:id="@+id/view_child_followup_row"
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:layout_below="@id/rlSbccSession"
        android:layout_marginTop="6dp"
        android:background="@color/light_grey"
        android:visibility="visible" />
</RelativeLayout>